Fix footer bug where image was overlapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,6 +187,7 @@ header {
 .footer-wrapper {
     margin-top: auto;
     background-color: #f5f5f5;
+    margin-top: 80px;
 }
 
 .footer-container {
@@ -618,7 +619,7 @@ footer ul {
 
 .full-products-header {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 40rem;
 }
 
@@ -647,12 +648,16 @@ footer ul {
     flex-direction: column;
     align-items: center;
     background-color: #ffffff;
-    box-shadow: 0 2px 1px -1px #d6d4d4;
+    box-shadow: 0 2px 1px -1px #d6d4d4;    
 }
 
 .product-image {
     width: 200px;
     height: 200px;
+}
+
+#noimage {
+    display: block 
 }
 
 .product-brand {
